# netsuite-accounting-toolkit

./: .gitignore  LICENSE  README.md
docs/: HOW_WE_BUILT_IT_TEMPLATE.md
netsuite-developer/: SKILL.md
netsuite-developer/references/: BYO_METADATA.md  BYO_MODULE.md
netsuite-developer/scripts/: query_metadata.py
netsuite-file-attach/: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SKILL.md  attach_file.py  requirements.txt  setup.bat  setup.ps1  setup.sh
netsuite-file-attach/sdf-project/: deploy.xml  manifest.xml
orchestrator/: README.md  orchestrator.py  orchestrator_config.example.json
post-je-to-netsuite/: LICENSE  README.md  SKILL.md
post-je-to-netsuite/examples/: sample_aicje.json  sample_invalid.json  sample_je.json
post-je-to-netsuite/references/: aicje-overview.md  handoff-format.md  payload-shapes.md  skill-creator-integration.md  your-org-coa.md.template
post-je-to-netsuite/scripts/: post_je.py  render_preview.py  validate_je.py
post-je-to-netsuite/templates/: je-preview.md.tpl
rippling-aicje-name/: .gitignore  README.md  suitecloud.config.js
slack-entry-notify/: .gitignore  LICENSE  README.md  pyproject.toml
slack-entry-notify/examples/: info_heartbeat.json  pending_journal_entry.json  posted_with_benefit.json
slack-entry-notify/skill/: SKILL.md
slack-entry-notify/skill/references/: message-format.md  payload-shape.md
slack-entry-notify/skill/scripts/: render_message.py
slack-entry-notify/skill/templates/: notification.md.tpl
slack-entry-notify/tests/: test_render_message.py
(+18 files in other folders)
