[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-entry-notify"
version = "0.1.0"
description = "Render structured payloads into review-queue-style Slack notifications. Zero runtime dependencies."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["slack", "notifications", "accounting", "journal-entry", "claude", "agent-skill"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
